  * apport/fileutils.py, mark_report_seen(): Do not crash if the file does not
    exist any more, because it was removed underneath us. (LP: #199932)
  * apport/ui.py, test_collect_info_exepath(): Add a tuple argument and a
    CompressedValue to the test report. This reproduces LP #199349.
  * apport/report.py, anonymize(): Only work on string values. (LP: #199349)

  [ Kees Cook ]
  * apport/report.py: fix module license checking logic (LP: #199927).
    - nonfree_modules: being unable to find a module should not mean the
      module is non-free.
    - test_module_license_evaluation: check modinfo reporting.
  * problem_report.py: Skip atime test case if file system is mounted noatime.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 13 Mar 2008 13:42:51 +0100

apport (0.103) hardy; urgency=low

  * bin/apport-unpack: Print error messages instead of crashing for problems
    like nonexisting file names passed as arguments. (LP: #185273)
  * backends/packaging-apt-dpkg.py, is_distro_package(): Explicitly check site
    for "ppa", so that we do not automatically file bugs for PPA packages.
    This works around Soyuz bug LP #140412 for the time being.
  * apport/report.py: Add standard_title() test cases for Python crashes with
    a custom message, and a custom message with newlines. The latter
    reproduces LP #190947.
  * apport/report.py, standard_title(): Do not rely on a fixed position of the
    topmost function; use iteration and regular expression matching instead.
    (LP: #190947)
  * apport/ui.py, parse_argv(): Specify that --pid/-P argument must be an
    integer, to avoid exceptions when it's not. (LP: #193494)
  * apport/report.py: Use uname -srm, not -a, to hide the hostname. (part of
    LP #192786); also use os.uname() instead of calling the system program.
  * problem_report.py(): Make write() work for reports with CompressedValues.
    Add test case.
  * apport/ui.py: Add test case test_run_crash_anonymity() which asserts that